# ftdc

./: Cargo.toml  README.md
ftdc/: Cargo.toml
ftdc/src/: lib.rs  reader.rs  util.rs  writer.rs
notebooks/: ftdc_stall.ipynb
src/: main.rs
