[package]
name = "cli"
version = "0.2.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2021"

[workspace]
members = [
    "ftdc",
]

[dependencies]
ftdc = {path="ftdc"}

bson = { version= "2.8.1"}
# TODO - switch to clap
structopt = "0.3.26"
indicatif = "0.17.7"

#chrono = "0.4.31"
streaming-iterator = "0.1.9"

serde_json = "1.0.111"


[profile.release]
debug = true
