[package]
name = "cli"
version = "0.2.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2021"
license = "Apache-2.0"

[workspace]
members = [
    "ftdc",
]

[dependencies]
ftdc = {path="ftdc"}

bson = { version= "2.8.1"}
indicatif = "0.17.7"
anyhow = "1.0.79"

#chrono = "0.4.31"
streaming-iterator = "0.1.9"

serde_json = "1.0.111"
clap = { version = "4.4.18", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[profile.release]
debug = true
